2011-02-25  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Eric Seidel.

        'load' and 'error' events fired for @poster
        https://bugs.webkit.org/show_bug.cgi?id=54908

        * html/HTMLImageLoader.cpp:
        (WebCore::HTMLImageLoader::dispatchLoadEvent): Don't fire events when being used
        by a video element.

2011-02-25  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Eric Seidel.

        'load' and 'error' events fired for @poster
        https://bugs.webkit.org/show_bug.cgi?id=54908

        * media/video-poster.html: Register listeners for 'load' and 'error' events so the test will
        fail if they ever fire.



Canonical link: https://commits.webkit.org/69636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79718 268f45cc-cd09-0410-ab3c-d52691b4dbfc