Source/WebCore/html/HTMLImageLoader.cpp
@@ -49,6 +49,10 @@ HTMLImageLoader::~HTMLImageLoader()
 
 void HTMLImageLoader::dispatchLoadEvent()
 {
+    // HTMLVideoElement uses this class to load the poster image, but it should not fire events for loading or failure.
+    if (element()->hasTagName(HTMLNames::videoTag))
+        return;
+
     bool errorOccurred = image()->errorOccurred();
     if (!errorOccurred && image()->response().httpStatusCode() >= 400)
         errorOccurred = element()->hasTagName(HTMLNames::objectTag); // An <object> considers a 404 to be an error and should fire onerror.
